Updated Header to fix overflow on smaller resolutions

--- a/Content/PanelLayout.scss
+++ b/Content/PanelLayout.scss
@@ -97,7 +97,7 @@
 
             .Header {
                 display: grid;
-                grid-template-columns: 3rem 1fr auto;
+                grid-template-columns: 3rem minmax(1.5rem, 1fr) minmax(2.5rem, 10rem);
                 grid-template-rows: 3rem;
                 grid-gap: 1rem;
                 background-color: #C4C4C4;
@@ -121,18 +121,34 @@
                     align-items: center;
                     font-weight: bold;
                     font-size: 1.1em;
-                    text-overflow: ellipsis;
                     overflow: hidden;
+
+                    span {
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                    }
                 }
 
                 .Toolbar {
+                    justify-content: flex-end;
                     display: grid;
                     //grid-template-columns: 0 0 0 0 0 0 0 0 2rem;
                     grid-template-columns: 2rem 0.5rem 2rem 0.5rem 2rem 0.5rem 2rem;
                     align-content: center;
+                    overflow: hidden;
+                    border-radius: 0.5rem;
+                    position: relative;
 
                     &:hover {
                         //grid-template-columns: 2rem 0.5rem 2rem 0.5rem 2rem 0.5rem 2rem 0.5rem 2rem;
+                    }
+
+                    .Mask {
+                        position: absolute;
+                        left: 0;
+                        width: 1rem;
+                        height: 100%;
+                        box-shadow: inset 25px 0px 10px -20px #C4C4C4;
                     }
 
                     .Button {
@@ -194,13 +210,29 @@
             }
 
             .Body {
-                display: flex;
                 height: 100%;
-                justify-content: center;
-                align-items: center;
+                display: grid;
+                grid-template-columns: 1fr 9fr;
+                grid-template-rows: 1fr;
+                grid-gap: 1rem;
                 background-color: #edf1f4;
                 border-radius: 0.5rem;
                 padding: 1rem;
+
+                .Image {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: flex-start;
+
+                    img {
+                        height: auto;
+                        width: auto;
+                    }
+                }
+
+                .Text {
+                }
             }
         }
 
